--- a/src/css/less/bootstrap/rules/panels.less
+++ b/src/css/less/bootstrap/rules/panels.less
@@ -22,6 +22,7 @@
     .panel-title{
       display: inline;
       .panel-title-font-style();
+      flex: 1 1 100%;
       
       > img{
         max-width: 20px;
